fixed photo reel added remove button

--- a/P1/manage-properties-1-property.html
+++ b/P1/manage-properties-1-property.html
@@ -38,7 +38,7 @@
                     <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
                   </a>
                 <ul class="dropdown-menu dropdown-menu-end me-1">
-                  <li><a class="dropdown-item" href="host-property-1-custom-datetime.html">My Properties</a></li>
+                  <li><a class="dropdown-item" href="manage-properties.html">My Properties</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="no-reservations.html">My Reservations</a></li>
                   <li><hr class="dropdown-divider"></li>
@@ -46,7 +46,7 @@
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="signed-out.html">Log Out</a></li>
                 </ul>
-              </div> 
+              </div>  
               </div>
             </div>
         </nav>
@@ -68,7 +68,6 @@
                         <i class="bi bi-plus"></i>
                       </a>
                       <a href="#" class="list-group-item list-group-item-action active"  aria-current="true">Private Isolated Mansion</a>
-                      <a href="host-property-created.html" class="list-group-item list-group-item-action"  aria-current="true">Vampire Mansion</a>
                   </div>
                 </div>
               </div>
@@ -161,7 +160,7 @@
                         </div>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
-                        kitchen.jpg
+                        interior.jpg
                         <div class="photo-name-display">
                           <input class="short-input form-control" type="number" required value="2">
                           <button class="btn p-0" type="button"><i class="bi bi-trash"></i></button>
@@ -178,7 +177,7 @@
                   </div>
                   <div>
                     <h5>Display</h5>
-                    <div id="carouselExampleFade" class="carousel slide carousel-fade ">
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                           <img src="images/cabin.jpg" class="d-block w-100">
@@ -207,10 +206,7 @@
                   <div id="request-existing">
                     <h6>Existing Changes</h6>
                     <ul class="list-group ">
-                      <li class="list-group-item d-flex justify-content-between align-items-center p-1 border-0" id="custom-existing-change">
-                        12-05-2023 to 12-09-2023, unavailable
-                        <button class="btn p-0" type="button"><i class="bi bi-trash"></i></button>
-                      </li>
+                      
                     </ul>
                   </div>
                   <div id="request-custom">
@@ -234,7 +230,7 @@
                         <label for="rate">Rate ($/night)</label>
                         <input type="text" class="form-control short-input" id="rate">
                       </div>
-                      <button type="submit" class="btn btn-light submit-btn">Update</button>
+                      <a href="host-property-1-custom-datetime.html" type="submit" class="btn btn-light submit-btn">Update</a>
                     </form>
                   </div>
                 </div>
