--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -155,15 +155,24 @@
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
                         cabin.jpg
-                        <input class="short-input form-control" type="number" required value="1">
+                        <div class="photo-name-display">
+                          <input class="short-input form-control" type="number" required value="1">
+                          <button class="btn p-0" type="button"><i class="bi bi-trash"></i></button>
+                        </div>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
-                        kitchen.jpg
-                        <input class="short-input form-control" type="number" required value="2"/>
+                        interior.jpg
+                        <div class="photo-name-display">
+                          <input class="short-input form-control" type="number" required value="2">
+                          <button class="btn p-0" type="button"><i class="bi bi-trash"></i></button>
+                        </div>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
                         living-room.jpg
-                        <input class="short-input form-control" type="number" required value="3"/>
+                        <div class="photo-name-display">
+                          <input class="short-input form-control" type="number" required value="3">
+                          <button class="btn p-0" type="button"><i class="bi bi-trash"></i></button>
+                        </div>
                       </li>
                     </ul>
                   </div>
