--- a/P1/add-new-property.html
+++ b/P1/add-new-property.html
@@ -67,7 +67,7 @@
                       <a href="add-new-property.html" class="list-group-item list-group-item-action active">
                         <i class="bi bi-plus"></i>
                       </a>
-                      <a href="#" class="list-group-item list-group-item-action"  aria-current="true">Private Isolated Mansion</a>
+                      <a href="manage-properties-1-property.html" class="list-group-item list-group-item-action"  aria-current="true">Private Isolated Mansion</a>
                   </div>
                 </div>
               </div>
@@ -153,6 +153,15 @@
                           <i class="bi bi-plus"></i>
                         </label>
                       </li>
+                      <div id="hide-me-2">
+                        <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
+                          interior.jpg
+                          <div class="photo-name-display">
+                            <input class="short-input form-control" type="number" required value="1">
+                            <button class="btn p-0" type="button"><i class="bi bi-trash"></i></button>
+                          </div>
+                        </li>
+                      </div>
                     </ul>
                   </div>
                   <div>
