--- a/P1/host-property-created.html
+++ b/P1/host-property-created.html
@@ -154,7 +154,10 @@
                           </label>
                           <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
                             interior.jpg
-                            <input class="short-input form-control" type="number" required value="1">
+                            <div class="photo-name-display">
+                              <input class="short-input form-control" type="number" required value="1">
+                              <button class="btn p-0" type="button"><i class="bi bi-trash"></i></button>
+                            </div>
                           </li>
                         </li>
                       </ul>
