--- a/P1/editable-profile-no-image.html
+++ b/P1/editable-profile-no-image.html
@@ -55,7 +55,7 @@
             <div class="card-group cards-profile">
               <div class="card border-0 profile-card profile-image">
                 <div class="card-body profile-body profile-image-1">
-                  <img src="images/edwards.png" id="me" class="img-fluid d-block" alt="Avatar"> 
+                  <i class="bi bi-person-circle"></i>
                   <div class="image-links">
                     <div><a href="editable-profile-no-image.html" class="btn btn-primary mb-2">Remove photo</a></div>
                     <a href="editable-profile-new-image.html" class="btn btn-primary">Change photo</a>
