--- a/P1/profile-new.html
+++ b/P1/profile-new.html
@@ -69,7 +69,7 @@
                   <div id="about-profile">
                     <h4>About</h4>
                     <p>I'm the world's most dangerous predator. Everything about me invites you in.</p>
-                    <div class="mb-3"><i class="bi bi-house-door-fill">  Lives in Toronto, ON</i></div>
+                    <div class="mb-3"><i class="bi bi-house-door-fill">  Lives in Vancouver, BC</i></div>
                     <div><i class="bi bi-briefcase-fill">  Work: Software Engineer</i></div>
                   </div>
                   <a href="editable-profile.html" type="button" class="btn btn-outline-secondary">Edit Profile</a>
