logged in property

--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -205,7 +205,7 @@
             <p class="card-text">4347 km away</p>
             <p class="card-text">Feb. 10-18</p>
             <p class="card-text font-weight-bold">$1000 CAD/night</p>
-            <a href="property.html" class="btn btn-primary mt-1">View more</a>
+            <a href="property-loggedin.html" class="btn btn-primary mt-1">View more</a>
         </div>
       </div>
       
